--- a/stylesheets/sass/style.scss
+++ b/stylesheets/sass/style.scss
@@ -1,26 +1,91 @@
 @import "960";
 @import "reset"; 
+@import "global-styles"; 
 
 
+html {
+	-webkit-font-smoothing: antialiased; 
+	/*background: $bg-color;*/
+}
 
-/*  HTML5 ✰ Boilerplate  */
+body { 
+	background: url(/images/bg/body.gif) repeat;
+	font: #{$font-size}/#{$line-height} "proxima-nova-1", "proxima-nova-2", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: $text-color; 
+	letter-spacing: .04em;
+	font-weight: $medium;
+}
 
+a, a:active, a:visited {
+	color: $link-color;	
+	text-decoration: none;
+}
+a:hover {
+	color: $link-hover-color;
+}
 
+header {
+	padding: 34px 0 30px 160px;
+	overflow: hidden;
+	h1 {
+		width: 383px;
+		height: 33px;
+		float: left;
+		a {
+			background: transparent url(/images/bg/h1.png) top no-repeat;		
+			display: block;
+			width: 100%;
+			height: 100%;
+			text-indent: -9999px;
+			&:hover {
+				background-position: bottom;
+			}
+		}
+	}
+	#topguest {
+		float: left;
+		margin: 14px 0 0 20px;
+	}
+}
 
-/*
-    // ========================================== \\
-   ||                                              ||
-   ||               Your styles !                  ||
-   ||                                              ||
-    \\ ========================================== //
-*/
-
-
-
-
-
-
-
+.post-home {
+	border-top: 2px solid $line-color;
+	img {
+		border: 2px solid $line-color;
+		border-top: none;
+	}
+	.meta-data {
+		position: relative;
+		a.image-link {
+			height: 60px;
+			width: 60px;
+			display: block;
+		}
+		.cover {
+			position: absolute;
+			top: 0;
+			left: 2px;
+			background: #000;
+			opacity: 0.2;
+			height: 56px;
+			width: 56px;
+			cursor: pointer;
+		}
+		.author-link {
+			display: block;
+		}
+	}
+	h1 {
+		font-size: $font-size * 2;
+		line-height: ($font-size * 2) + 6;
+		font-weight: $medium;
+		letter-spacing: 2px;
+		margin-top: 12px;
+	}
+	.post-summary {
+		margin-top: 16px;
+	}
+}
 
 
 
