--- a/stylesheets/compiled/style.css
+++ b/stylesheets/compiled/style.css
@@ -710,7 +710,9 @@ header {
     margin: 14px 0 0 20px; }
 
 .post-home {
-  border-top: 2px solid #2d3339; }
+  border-top: 2px solid #2d3339;
+  overflow: hidden;
+  padding-bottom: 30px; }
   .post-home img {
     border: 2px solid #2d3339;
     border-top: none; }
