--- a/stylesheets/compiled/style.css
+++ b/stylesheets/compiled/style.css
@@ -681,7 +681,8 @@ body {
   font: 15px/22px "proxima-nova-1", "proxima-nova-2", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #e6e6e6;
   letter-spacing: .04em;
-  font-weight: 300; }
+  font-weight: 300;
+  text-shadow: 0px 0px 3px #363e45; }
 
 a, a:active, a:visited {
   color: #6bb9f2;
@@ -719,18 +720,15 @@ header {
   .post-home .meta-data {
     position: relative; }
     .post-home .meta-data a.image-link {
-      height: 60px;
+      height: 58px;
       width: 60px;
-      display: block; }
-    .post-home .meta-data .cover {
-      position: absolute;
-      top: 0;
-      left: 2px;
-      background: #000;
-      opacity: 0.2;
-      height: 56px;
-      width: 56px;
-      cursor: pointer; }
+      display: block;
+      background: black;
+      margin-bottom: 2px; }
+      .post-home .meta-data a.image-link img {
+        opacity: 0.8; }
+      .post-home .meta-data a.image-link:hover img {
+        opacity: 1; }
     .post-home .meta-data .author-link {
       display: block; }
   .post-home h1 {
