--- a/stylesheets/sass/style.scss
+++ b/stylesheets/sass/style.scss
@@ -2,19 +2,32 @@
 @import "reset"; 
 @import "global-styles"; 
 
-
 html {
 	-webkit-font-smoothing: antialiased; 
-	/*background: $bg-color;*/
+	background: #131517;
 }
 
 body { 
 	background: url(/images/bg/body.gif) repeat;
 	font: #{$font-size}/#{$line-height} "proxima-nova-1", "proxima-nova-2", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: $text-color; 
-	letter-spacing: .04em;
+	letter-spacing: 0.05em;
 	font-weight: $medium;
 	text-shadow: 0px 0px 3px #363e45;
+}
+
+#media {
+	background: url(/images/bg/media.gif) repeat;
+	overflow: hidden;	
+	border-bottom: 2px solid #2d3339;
+}
+
+footer {
+	background: #131517;
+}
+
+.container_12 {
+	overflow: hidden;
 }
 
 a, a:active, a:visited {
@@ -87,6 +100,7 @@ header {
 		margin-top: 16px;
 	}
 }
+
 
 
 
