--- a/stylesheets/sass/style.scss
+++ b/stylesheets/sass/style.scss
@@ -30,6 +30,7 @@ footer {
 	overflow: hidden;
 }
 
+/*general*/
 a, a:active, a:visited {
 	color: $link-color;	
 	text-decoration: none;
@@ -37,7 +38,26 @@ a, a:active, a:visited {
 a:hover {
 	color: $link-hover-color;
 }
+h2 {
+	font-size: $font-size * 2;
+	line-height: ($font-size * 2) + 6;
+	font-weight: $medium;
+	letter-spacing: 2px;
+	margin-bottom: 20px;
+}
+a.image-link {
+	display: block;
+	background: black;
+	margin-bottom: 2px;
+	img {
+		opacity: 0.8;
+	}
+	&:hover img {
+		opacity: 1;
+	}
+}
 
+/*header*/
 header {
 	padding: 34px 0 30px 160px;
 	overflow: hidden;
@@ -62,6 +82,11 @@ header {
 	}
 }
 
+/* ---------
+homepage
+-----------*/
+
+/*blog home*/
 .post-home {
 	border-top: 2px solid $line-color;
 	overflow: hidden;
@@ -75,15 +100,6 @@ header {
 		a.image-link {
 			height: 58px;
 			width: 60px;
-			display: block;
-			background: black;
-			margin-bottom: 2px;
-			img {
-				opacity: 0.8;
-			}
-			&:hover img {
-				opacity: 1;
-			}
 		}
 		.author-link {
 			display: block;
@@ -101,6 +117,31 @@ header {
 	}
 }
 
+/*press*/
+#media {
+	padding: 20px 0 0 0;
+	h2 {
+		line-height: 30px;
+	}
+	ul {
+		margin: 0;
+		list-style: none;
+		li {
+			margin-bottom: 12px;
+		}
+	}
+	#images a.image-link {
+		height: 136px;
+		width: 136px;
+		float: left;
+		margin: 0 20px 20px 0;
+		display: block;
+		border: 2px solid $line-color;
+		&.omega {
+			margin-right: 0;
+		}
+	} 
+}
 
 
 
