--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,14 +1,14 @@
 ---
 layout: default
 ---
-<div id="post">
-{{ content }}
-</div>
-
-<div class="meta top">
-  &#8220;{{ page.title }}&#8221; is a blog post by <a href="/">Ozan&nbsp;Onay</a>.
-  It was originally published on {{ page.date | date: "%B %d, %Y" }} from {{ page.location }}.
-  Considering that it is hosted on github, you can
-  <a href="https://github.com/ozan/ozan.github.com/commits/master/_posts/{{ page.filename }}">see the modification history</a>.
-  It currently has <a href="#disqus_thread" id="comment-count" data-disqus-identifier="{{ page.filename }}">0 comments</a>.
+<article id="post">
+  <div class="meta-data grid_2 alpha">
+    <a class="image-link" href="{{ page.author-link }}"><img class="author" src="/images/{{ page.author-image }}" alt="{{ page.author }}" /></a>            
+    <div class="clear"></div>            
+    <a class="author-link" href="{{ page.author-link }}">{{ page.author }}</a>
+    <span class="date">{{ page.date | date: "%d %B %Y" }}</span>
+  </div>
+  <div class="grid_8 omega prepend_2 post-body">
+    {{ content }}
+  </div>
 </div>
