--- a/stylesheets/compiled/style.css
+++ b/stylesheets/compiled/style.css
@@ -719,9 +719,27 @@ a.image-link {
   a.image-link:hover img {
     opacity: 1; }
 
+p, ul, ol {
+  margin-bottom: 18px; }
+
+em {
+  color: #e3c89f; }
+
+img.author {
+  border: 2px solid #2d3339;
+  border-top: none; }
+
+.meta-data {
+  position: relative; }
+  .meta-data a.image-link {
+    height: 58px;
+    width: 60px; }
+  .meta-data .author-link {
+    display: block; }
+
 /*header*/
 header {
-  padding: 34px 0 30px 160px;
+  padding: 44px 0 40px 158px;
   overflow: hidden; }
   header h1 {
     width: 383px;
@@ -747,16 +765,6 @@ homepage
   border-top: 2px solid #2d3339;
   overflow: hidden;
   padding-bottom: 30px; }
-  .post-home img {
-    border: 2px solid #2d3339;
-    border-top: none; }
-  .post-home .meta-data {
-    position: relative; }
-    .post-home .meta-data a.image-link {
-      height: 58px;
-      width: 60px; }
-    .post-home .meta-data .author-link {
-      display: block; }
   .post-home h1 {
     font-size: 30px;
     line-height: 36px;
@@ -777,6 +785,8 @@ homepage
     list-style: none; }
     #media ul li {
       margin-bottom: 12px; }
+      #media ul li .source {
+        margin-bottom: 0; }
   #media #images a.image-link {
     height: 136px;
     width: 136px;
@@ -786,6 +796,25 @@ homepage
     border: 2px solid #2d3339; }
     #media #images a.image-link.omega {
       margin-right: 0; }
+
+/*Posts*/
+#post {
+  overflow: hidden;
+  padding-bottom: 20px; }
+  #post .meta-data {
+    border-top: 2px solid #2d3339;
+    margin-right: 0 !important;
+    padding-right: 20px; }
+  #post .post-body {
+    border-top: 2px solid #2d3339;
+    margin-left: 0 !important; }
+  #post h1 {
+    font-size: 30px;
+    line-height: 36px;
+    font-weight: 300;
+    letter-spacing: 2px;
+    margin-top: 12px;
+    margin-bottom: 18px; }
 
 /* ---------
 footer
