GA for topguest.github.com

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,15 +45,15 @@ layout: none
   		        <a class="link" href="http://networkeffect.allthingsd.com/20110406/topguest-hustles-its-way-into-making-travel-loyalty-pay-video/?mod=ATD_rss">Topguest Hustles Its Way into Making Travel Loyalty Pay</a>
   		      </li>
   		      <li>
-  		        <p class="source"><strong>Techcrunch</strong> – 27 March 2011</p>
+  		        <p class="source"><strong>Techcrunch</strong> – 15 November 2011</p>
   		        <a class="link" href="http://techcrunch.com/2011/03/27/topguest-instagram/">A Picture Is Worth A Thousand Points: Topguest Hooks Up With Instagram</a>
   		      </li>
   		      <li>
-  		        <p class="source"><strong>All Things Digital</strong> – 6 April 2011</p>
-  		        <a class="link" href="http://networkeffect.allthingsd.com/20110406/topguest-hustles-its-way-into-making-travel-loyalty-pay-video/?mod=ATD_rss">Topguest Hustles Its Way into Making Travel Loyalty Pay</a>
+  		        <p class="source"><strong>Mashable</strong> – 6 April 2011</p>
+  		        <a class="link" href="http://mashable.com/2010/11/15/topguest-partners/">Topguest partners with Virgin America Elevate</a>
   		      </li>
   		    </ul>
-  		    <a class="button">Full press history</a>
+  		    <a class="button" id="press-button">Full press history</a>
   		  </div>
   		  <div class="grid_8 omega" id="images">
   		    <a rel="image-gallery"  class="image-link" href="/images/media01-b.jpg" title="Poolside at Topguest's Launch Party &ndash; Standard Hotel NY"><img src="/images/media01.jpg" / alt=""></a>
@@ -96,7 +96,7 @@ layout: none
 	<script src="/js/plugins.js"></script>
 	<script src="/js/script.js"></script>
 	<script>
-		var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']]; // Change UA-XXXXX-X to be your site's ID
+		var _gaq=[['_setAccount','UA-16885944-2'],['_trackPageview']]; // Change UA-XXXXX-X to be your site's ID
 		(function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];g.async=1;
 		g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
 		s.parentNode.insertBefore(g,s)}(document,'script'));
