--- a/stylesheets/compiled/style.css
+++ b/stylesheets/compiled/style.css
@@ -737,6 +737,21 @@ img.author {
   .meta-data .author-link {
     display: block; }
 
+.button {
+  background: #12181d;
+  background: -webkit-gradient(linear, left top, left bottom, from(#11202a), to(#12181d));
+  background: -moz-linear-gradient(top, #11202a, #12181d);
+  color: #6bb9f2;
+  padding: 3px 10px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  border: 1px solid #1a2b38;
+  padding: 6px 14px; }
+  .button:hover {
+    color: #fff !important;
+    background: #11202A; }
+
 /*header*/
 header {
   padding: 44px 0 40px 158px;
@@ -777,7 +792,7 @@ homepage
 
 /*press*/
 #media {
-  padding: 20px 0 0 0; }
+  padding: 20px 0 20px 0; }
   #media h2 {
     line-height: 30px; }
   #media ul {
@@ -796,6 +811,10 @@ homepage
     border: 2px solid #2d3339; }
     #media #images a.image-link.omega {
       margin-right: 0; }
+
+#press-button {
+  display: inline-block;
+  margin-top: 4px; }
 
 /*Posts*/
 #post {
