add press page and static template

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,7 +53,7 @@ layout: none
   		        <a class="link" href="http://mashable.com/2010/11/15/topguest-partners/">Topguest partners with Virgin America Elevate</a>
   		      </li>
   		    </ul>
-  		    <a class="button" id="press-button">Full press history</a>
+  		    <a class="button" id="press-button" href="/press.html">Full press history</a>
   		  </div>
   		  <div class="grid_8 omega" id="images">
   		    <a rel="image-gallery"  class="image-link" href="/images/media01-b.jpg" title="Poolside at Topguest's Launch Party &ndash; Standard Hotel NY"><img src="/images/media01.jpg" / alt=""></a>
