added press list and sass cache to gitignore

--- a/stylesheets/sass/_global-styles.scss
+++ b/stylesheets/sass/_global-styles.scss
@@ -79,3 +79,15 @@ $v-length-fixed: 2px;
 	box-shadow: $h $v $b $c;
 }
 
+@mixin press-list {
+	ul#press {
+		margin: 0;
+		list-style: none;
+		li {
+			margin-bottom: 12px;
+			.source {
+				margin-bottom: 0;
+			}
+		}
+	}
+}
