--- a/stylesheets/compiled/style.css
+++ b/stylesheets/compiled/style.css
@@ -795,13 +795,6 @@ homepage
   padding: 20px 0 20px 0; }
   #media h2 {
     line-height: 30px; }
-  #media ul {
-    margin: 0;
-    list-style: none; }
-    #media ul li {
-      margin-bottom: 12px; }
-      #media ul li .source {
-        margin-bottom: 0; }
   #media #images a.image-link {
     height: 136px;
     width: 136px;
@@ -834,6 +827,17 @@ homepage
     letter-spacing: 2px;
     margin-top: 20px;
     margin-bottom: 30px; }
+
+/* ---------
+press page
+-----------*/
+ul#press {
+  margin: 0;
+  list-style: none; }
+  ul#press li {
+    margin-bottom: 12px; }
+    ul#press li .source {
+      margin-bottom: 0; }
 
 /* ---------
 footer
