--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -95,7 +95,7 @@ layout: none
 	<script src="/js/libs/fancybox/jquery.fancybox-1.3.4.pack.js"></script>
 	<script src="/js/plugins.js"></script>
 	<script src="/js/script.js"></script><script>
-		var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']]; // Change UA-XXXXX-X to be your site's ID
+		var _gaq=[['_setAccount','UA-16885944-1'],['_trackPageview']]; // Change UA-XXXXX-X to be your site's ID
 		(function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];g.async=1;
 		g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
 		s.parentNode.insertBefore(g,s)}(document,'script'));
