dynamic page titles

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@ layout: none
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	
-	<title>Topguest blog</title>
+	<title>{{ page.title }}</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 	
@@ -49,7 +49,7 @@ layout: none
   		        <a class="link" href="http://techcrunch.com/2011/03/27/topguest-instagram/">A Picture Is Worth A Thousand Points: Topguest Hooks Up With Instagram</a>
   		      </li>
   		      <li>
-  		        <p class="source"><strong>Mashable</strong> – 15 November 2011</p>
+  		        <p class="source"><strong>Mashable</strong> – 15 November 2010</p>
   		        <a class="link" href="http://mashable.com/2010/11/15/topguest-partners/">Topguest partners with Virgin America Elevate</a>
   		      </li>
   		    </ul>
