--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,8 +13,7 @@ layout: none
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
-	<link rel="shortcut icon" href="/favicon.ico">
-	<link rel="apple-touch-icon" href="/apple-touch-icon.png">
+	<link rel="shortcut icon" type="image/png" href="/favicon.png">
 	<link rel="stylesheet" href="/js/libs/fancybox/jquery.fancybox-1.3.4.css">
 	<link rel="stylesheet" href="/stylesheets/compiled/style.css?v=2">
   
