now with fork banner, although commented out until repo made public

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,7 @@ layout: none
 		<header class="grid_12">
       <h1><a href="/">Topguest blog</a></h1>
       <a id="topguest" href="http://topguest.com">Visit topguest.com</a>
+      <!-- <a id="fork" href="https://github.com/Topguest/topguest.github.com">Fork this blog</a> -->
 		</header>
 
 		<div id="main" role="main" class="grid_12">
