--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -95,18 +95,18 @@ layout: none
 	<script src="/js/libs/fancybox/jquery.fancybox-1.3.4.pack.js"></script>
 	<script src="/js/plugins.js"></script>
 	<script src="/js/script.js"></script>
-	<script>
-		var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-16885944-1']);
-    _gaq.push(['_setDomainName', '.topguest.com']);
-    _gaq.push(['_setAllowHash', false]);
+  <script type="text/javascript">
+
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-16885944-3']);
     _gaq.push(['_trackPageview']);
 
     (function() {
       var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
       ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-      (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(ga);
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
     })();
-	</script>
+
+  </script>
 </body>
 </html>
