--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -84,7 +84,7 @@ layout: none
   		    </ul>  		    
   		  </div>
   		  <div class="clear"></div>
-		    <p id="fine-print">Hosted by <a href="https://github.com">Github</a> and powered by <a href="https://github.com/mojombo/jekyll">Jekyll</a>. Licensed under the <a href="http://creativecommons.org/licenses/by-sa/3.0/us/">Creative Commons attribution-share alike license</a>.</p>  		  
+		    <p id="fine-print">Hosted by <a href="https://github.com">Github</a> and powered by <a href="https://github.com/mojombo/jekyll">Jekyll</a>. Licensed under the <a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons attribution license</a>.</p>  		  
   		</div>
   	</div>
 	</footer>
