added some meta data

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,9 +8,9 @@ layout: none
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	
 	<title>{{ page.title }}</title>
-	<meta name="description" content="">
-	<meta name="author" content="">
-	
+	<meta name="description" content="Topguest's company blog - news, press and photographs. Entrepreneurial, engineering and design insights. ">
+	<meta name="author" content="Topguest 2011. Geoff Lewis, Ash Fontana, Ozan Onay, Nathan McGinness, Tim Olshansky">
+	  
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
 	<link rel="shortcut icon" type="image/png" href="/favicon.png">
