--- a/stylesheets/sass/style.scss
+++ b/stylesheets/sass/style.scss
@@ -82,7 +82,7 @@ img.author {
 	padding: 6px 14px;
 	&:hover {
 		@include button-hover;
-		border: 1px solid #faa;		
+/*		border: 1px solid #faa;		*/
 	}
 }
 
