--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,17 +41,17 @@ layout: none
   		    <h2>Press</h2>
   		    <ul id="press">
   		      <li>
+  		        <p class="source"><strong>Mashable</strong> – 21 April 2011</p>
+  		        <a href="http://mashable.com/2011/04/21/caesars-rewards-checkins/">Social Media Participation Gets Rewarded in Vegas</a>
+  		      </li>
+  		      <li>
   		        <p class="source"><strong>All Things Digital</strong> – 6 April 2011</p>
-  		        <a class="link" href="http://networkeffect.allthingsd.com/20110406/topguest-hustles-its-way-into-making-travel-loyalty-pay-video/?mod=ATD_rss">Topguest Hustles Its Way into Making Travel Loyalty Pay</a>
+  		        <a href="http://networkeffect.allthingsd.com/20110406/topguest-hustles-its-way-into-making-travel-loyalty-pay-video/?mod=ATD_rss">Topguest Hustles Its Way into Making Travel Loyalty Pay</a>
   		      </li>
   		      <li>
   		        <p class="source"><strong>Techcrunch</strong> – 27 March 2011</p>
-  		        <a class="link" href="http://techcrunch.com/2011/03/27/topguest-instagram/">A Picture Is Worth A Thousand Points: Topguest Hooks Up With Instagram</a>
-  		      </li>
-  		      <li>
-  		        <p class="source"><strong>Mashable</strong> – 15 November 2010</p>
-  		        <a class="link" href="http://mashable.com/2010/11/15/topguest-partners/">Topguest partners with Virgin America Elevate</a>
-  		      </li>
+  		        <a href="http://techcrunch.com/2011/03/27/topguest-instagram/">A Picture Is Worth A Thousand Points: Topguest Hooks Up With Instagram</a>
+  		      </li>  		      
   		    </ul>
   		    <a class="button" id="press-button" href="/press.html">Full press history</a>
   		  </div>
