New mobile blog post

--- a/stylesheets/sass/style.scss
+++ b/stylesheets/sass/style.scss
@@ -196,6 +196,12 @@ homepage
 		margin-top: 20px;
 		margin-bottom: 30px;
 	}
+	img.in-post {
+		float: left;
+		margin-right: 14px;
+		border: 2px solid $line-color;
+		margin-bottom: 20px;
+	}
 }
 
 /* ---------
