--- a/stylesheets/sass/style.scss
+++ b/stylesheets/sass/style.scss
@@ -13,7 +13,7 @@ body {
   color: $text-color; 
 	letter-spacing: 0.03em;
 	font-weight: $medium;
-	text-shadow: 0px 0px 3px #363e45;
+	/*text-shadow: 0px 0px 3px #363e45;*/
 	overflow: hidden;
 }
 
@@ -51,7 +51,7 @@ a.image-link {
 	background: black;
 	margin-bottom: 2px;
 	img {
-		opacity: 0.8;
+		opacity: 0.9;
 	}
 	&:hover img {
 		opacity: 1;
@@ -61,7 +61,7 @@ p, ul, ol {
 	margin-bottom: 18px;
 } 
 em {
-	color: #e3c89f;
+	font-style: italic;
 }
 img.author {
 	border: 2px solid $line-color;
