color scheme update

--- a/stylesheets/sass/_global-styles.scss
+++ b/stylesheets/sass/_global-styles.scss
@@ -10,6 +10,7 @@ $nav-blue-bg: #12181C;
 $nav-blue-hover: #131c22;
 $nav-blue-selected: #0a1014;
 $sidebar-blue-bg: #0f1417;
+$footer-text: #E6E6E6;
 
 $font-size: 15px;
 $line-height: 22px;
